# idlebot

./: .gitignore  .gitmodules  .justfile  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dockerfile  idlebot.cfg  idlebot_dev.cfg  idlebot_prod.cfg  pyproject.toml
.github/workflows/: docker-deploy.yaml  unit-tests.yaml
etc/: example_config.yaml  idlebot_example.cfg
examples/: devbot.py
src/: devbot.py  idlebot.py  idlerpg.py  irc.py  main.py
src/idlebot/: __init__.py  __main__.py  config.py  idlerpg.py  irc.py  metrics.py  player.py  version.py
test/: test_linebuf.py  test_socketbuf.py
tests/: lipsum.txt  player.xml  test_linebuf.py  test_metrics.py  test_player.py  test_socketbuf.py
