[project]
name = "idlebot"
version = "2.3.4"
description = "A simple IRC bot for playing IdleRPG."
authors = [{ name = "jheddings", email = "jheddings@gmail.com" }]
requires-python = ">=3.13.7,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.12.5,<3",
    "click>=8.3.1,<9",
    "pyyaml>=6.0.3,<7",
    "prometheus-client>=0.23.1,<0.24",
    "requests>=2.32.5,<3",
    "pydantic-xml>=2.18.0,<3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0,<5",
    "ruff>=0.14.7,<0.15",
    "coverage>=7.12.0,<8",
    "pytest>=9.0.1,<10",
    "gitpython>=3.1.45,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idlebot"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["idlebot"]
