[project]
name = "idlebot"
version = "2.4.1"
description = "A simple IRC bot for playing IdleRPG."
authors = [{ name = "jheddings", email = "jheddings@gmail.com" }]
requires-python = ">=3.14.3,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.12.5,<3",
    "click>=8.3.1,<9",
    "pyyaml>=6.0.3,<7",
    "prometheus-client>=0.24.1,<0.25",
    "requests>=2.32.5,<3",
    "pydantic-xml>=2.19.0,<3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<5",
    "ruff>=0.15.4,<0.16",
    "coverage>=7.13.4,<8",
    "pytest>=9.0.2,<10",
    "gitpython>=3.1.46,<4",
    "pyright>=1.1.408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idlebot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["idlebot"]

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
